<resources>
    <string name="app_name">Donation_Tracker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_location">Location (for employees only)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_user_password">Username or password is incorrect.</string>
    <string name="error_username_taken">this username is unavalable</string>
    <string name="error_password_mismatch">passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_out">Log Out</string>

    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_location_detail">LocationDetailActivity</string>

    <string name="prompt__location_name">Name</string>
    <string name="prompt__location_type">Location Type</string>
    <string name="prompt_location_latitude">Latitude</string>
    <string name="prompt_location_longitude">Longitude</string>
    <string name="prompt_location_street_address">Street Address</string>
    <string name="prompt_location_city">City</string>
    <string name="prompt_location_state">State</string>
    <string name="prompt_location_zip">Zip</string>
    <string name="prompt_location_phone">Phone Number</string>
    <string name="add_location_button">Add Location</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
