<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controler.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/splashScreen"
        android:minHeight="400dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/splashScreen"
        android:weightSum="2">

        <Button
            android:id="@+id/guest_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guest" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logIn_button"
            android:text="Log in"


            />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:text="Sign up"

            />

    </LinearLayout>

    <!--<Button-->
    <!--android:id="@+id/locations_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginBottom="209dp"-->
    <!--android:text="Locations" />-->

</RelativeLayout>

